// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`decrementActiveEffectCount should handle below zero 1`] = `
{
  "activeEffectCount": 0,
  "prop1": "😈",
}
`;

exports[`decrementActiveEffectCount should handle zero 1`] = `
{
  "activeEffectCount": 0,
  "prop1": "😈",
}
`;

exports[`decrementActiveEffectCount should work 1`] = `
{
  "activeEffectCount": 18,
  "prop1": "😈",
}
`;

exports[`incrementActiveEffectCount should work 1`] = `
{
  "activeEffectCount": 10,
  "prop1": "😈",
}
`;
